--- a/assets/scss/pages/_book.scss
+++ b/assets/scss/pages/_book.scss
@@ -182,6 +182,7 @@
             font-size: vw(16);
             display: flex;
             align-items: center;
+            background-color: #F4F5F7;
             b {
                 padding: vw(14) vw(13);
                 color:#999;
@@ -198,6 +199,7 @@
                 width: 72%;
                 padding:vw(10) vw(20);
                 justify-content: space-between;
+                background-color: #fff;
                 > input {
                     width: 50%;
                     text-align: right;
@@ -247,10 +249,12 @@
         }
         .total_price {
             border-bottom: 1px solid #CACACA;
-            background-color: #fff;            
+            background-color: #F4F5F7;            
             div {                
-                justify-content: flex-end;                
+                justify-content: flex-end;
+                background-color: #fff;
                 input {
+                    height: vw(33);
                     color:#EA5504;
                     & + span {
                         color:#EA5504;
@@ -317,6 +321,9 @@
                     }
                     span + input {
                         flex: 1;
+                        margin-left: vw(10);
+                    }
+                    span + .category_wrap {
                         margin-left: vw(10);
                     }
                 }
@@ -616,6 +623,9 @@
                 div {
                     font-size: 26px;
                     padding: 15px 30px;
+                    input {
+                        height: 40px;
+                    }                   
                 }            
             } 
         }
