--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -972,7 +972,6 @@ header.header .inner .btn_user img {
   }
   header.header .inner .pc_f span {
     text-decoration: underline;
-    margin-right: 10px;
   }
   .main_menu {
     padding: 0;
@@ -5131,7 +5130,7 @@ main > .tit {
     font-size: 26px;
     font-weight: 500;
   }
-  .app .shipping_info .shipping_form li div .btn_coupon + input + span + span {
+  .app .shipping_info .shipping_form li div .pc {
     font-size: 18px;
     color: #777;
     -webkit-transform: translateY(2px);
@@ -7448,6 +7447,384 @@ main > .tit {
   .contest .sample_list a span {
     padding-right: 12px;
     background: url(../img/ico_arrow_right_w.svg) no-repeat 100% 50%/8px 14px;
+  }
+}
+
+#hanuri_greeting,
+#contest_sample {
+  margin-top: 16.38889vw;
+}
+
+@media (min-width: 1030px) {
+  #hanuri_greeting,
+  #contest_sample {
+    margin-top: 0;
+  }
+}
+
+.hanuri {
+  margin-bottom: 13.88889vw;
+  margin-top: 23.05556vw;
+  padding: 0 4.16667vw 0;
+}
+
+.hanuri h2 {
+  font-size: 5vw;
+  text-align: left;
+  font-weight: 500;
+  letter-spacing: -0.05em;
+  margin: 8.88889vw 0 2.77778vw;
+  color: #000;
+}
+
+.hanuri .greeting .txt {
+  font-size: 4.16667vw;
+  line-height: 1.5;
+}
+
+.hanuri .greeting .txt + .txt {
+  margin-top: 2.77778vw;
+}
+
+.hanuri .greeting .txt + img {
+  width: calc(100% + 8.335vw);
+  margin: 5.55556vw -4.16667vw;
+}
+
+.hanuri .greeting .t1 {
+  text-align: right;
+  font-size: 4.16667vw;
+  line-height: 1.5;
+  margin-top: 8.33333vw;
+}
+
+.hanuri .greeting .t1 b {
+  display: block;
+  font-size: 6.11111vw;
+  font-family: serif;
+  font-weight: 700;
+  letter-spacing: 0.2em;
+  margin-top: 1.38889vw;
+}
+
+.hanuri .purpose__top {
+  letter-spacing: -0.05em;
+}
+
+.hanuri .purpose__top img {
+  width: 33.33333vw;
+  margin: 0 auto;
+}
+
+.hanuri .purpose__top p {
+  line-height: 1.5;
+  margin-top: 5.55556vw;
+  font-size: 4.16667vw;
+}
+
+.hanuri .purpose .ideology_list {
+  width: 88.88889vw;
+  margin: 0 auto;
+  font-size: 4.44444vw;
+  font-weight: 700;
+}
+
+.hanuri .purpose .ideology_list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 11.11111vw;
+  color: #fff;
+  border-radius: 30px;
+  margin-top: 2.22222vw;
+}
+
+.hanuri .purpose .ideology_list li:first-child {
+  font-weight: 500;
+  color: #333;
+}
+
+.hanuri .purpose .ideology_list li:nth-child(2) {
+  background-color: #FFBA4D;
+  margin-top: 0;
+}
+
+.hanuri .purpose .ideology_list li:nth-child(3) {
+  background-color: #FFA24D;
+}
+
+.hanuri .purpose .ideology_list li:nth-child(4) {
+  background-color: #EA5504;
+}
+
+.hanuri .purpose .values_list {
+  margin: 0 -4.16667vw;
+  padding: 11.11111vw 5.55556vw;
+  height: 77.77778vw;
+  background-image: url(../img/hanuri/purpose_img2@2x.png);
+  background-image: -webkit-image-set(url(../img/hanuri/purpose_img2@2x.png) 2x, url(../img/hanuri/purpose_img2@3x.png) 3x);
+  background-image: image-set(url(../img/hanuri/purpose_img2@2x.png) 2x, url(../img/hanuri/purpose_img2@3x.png) 3x);
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.hanuri .purpose .values_list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.hanuri .purpose .values_list li + li {
+  margin-top: 2.77778vw;
+}
+
+.hanuri .purpose .values_list li b {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25vw;
+  font-size: 5vw;
+  color: #fff;
+  font-weight: 500;
+  line-height: 1;
+  text-align: center;
+}
+
+.hanuri .purpose .values_list li div {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  background-color: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 2.77778vw 4.72222vw;
+  font-size: 4.16667vw;
+  line-height: 1.2;
+}
+
+.hanuri .purpose .values_list li:nth-child(1) b {
+  background-color: #A13CAA;
+}
+
+.hanuri .purpose .values_list li:nth-child(2) b {
+  background-color: #713BB9;
+}
+
+.hanuri .purpose .values_list li:nth-child(3) b {
+  background-color: #992851;
+}
+
+.hanuri .purpose .principles_box {
+  margin: 0 -4.16667vw;
+  padding: 2.77778vw 4.16667vw;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.hanuri .purpose .principles_box h3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 44.44444vw;
+  height: 8.33333vw;
+  background-color: #666;
+  font-size: 4.44444vw;
+  color: #fff;
+  font-weight: 700;
+  border-radius: 24px;
+  margin: 0 auto 4.16667vw;
+}
+
+.hanuri .purpose .principles_box img {
+  width: 100%;
+}
+
+.hanuri .purpose .principles_box + .principles_box {
+  padding: 6.94444vw 5.55556vw;
+  margin-top: 9.72222vw;
+  background-color: #F4F5F7;
+}
+
+@media (min-width: 1030px) {
+  .hanuri {
+    width: 1030px;
+    margin: 0 auto 100px;
+    padding: 0;
+  }
+  .hanuri h2 {
+    font-size: 24px;
+    margin: 60px 0 16px;
+  }
+  .hanuri .greeting .txt {
+    font-size: 22px;
+    line-height: 1.8;
+    letter-spacing: -0.05em;
+  }
+  .hanuri .greeting .txt + .txt {
+    margin-top: 0;
+  }
+  .hanuri .greeting img {
+    width: 100%;
+    margin: 20px 0;
+  }
+  .hanuri .greeting .t1 {
+    text-align: right;
+    font-size: 22px;
+    line-height: 1.5;
+    margin-top: 40px;
+    letter-spacing: -0.05em;
+  }
+  .hanuri .greeting .t1 b {
+    display: inline-block;
+    font-size: 30px;
+    margin-top: 0;
+    margin-left: 5px;
+  }
+  .hanuri .purpose .text_list.half {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-bottom: 25px;
+  }
+  .hanuri .purpose .text_list.half li {
+    width: 50%;
+  }
+  .hanuri .purpose__top {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .hanuri .purpose__top img {
+    width: 180px;
+    margin: 0 60px 0 0;
+  }
+  .hanuri .purpose__top p {
+    margin-top: 0;
+    font-size: 22px;
+  }
+  .hanuri .purpose .ideology_list {
+    width: 600px;
+    font-size: 24px;
+  }
+  .hanuri .purpose .ideology_list li {
+    height: 60px;
+    margin-top: 14px;
+  }
+  .hanuri .purpose .values_list {
+    margin: 0;
+    padding: 85px 47px;
+    height: 330px;
+    background-image: url(../img/hanuri/purpose_img2.png);
+    background-position: 0 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 10px;
+    overflow: hidden;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .hanuri .purpose .values_list li {
+    width: 300px;
+    border-radius: 8px;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    overflow: hidden;
+    display: block;
+    text-align: center;
+  }
+  .hanuri .purpose .values_list li:nth-child(2) {
+    margin: 0 18px;
+  }
+  .hanuri .purpose .values_list li + li {
+    margin-top: 0;
+  }
+  .hanuri .purpose .values_list li b {
+    width: 100%;
+    font-size: 24px;
+    height: 56px;
+  }
+  .hanuri .purpose .values_list li div {
+    width: 100%;
+    -webkit-box-flex: 0;
+        -ms-flex: none;
+            flex: none;
+    background-color: #fff;
+    display: block;
+    padding: 20px 16px;
+    font-size: 22px;
+    color: #000;
+    text-align: center;
+    letter-spacing: -0.05em;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
+  }
+  .hanuri .purpose .flex_box_pc {
+    background-color: #F4F5F7;
+    padding: 50px 35px;
+  }
+  .hanuri .purpose .principles_box {
+    width: 472px;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .hanuri .purpose .principles_box h3 {
+    width: 220px;
+    height: 44px;
+    font-size: 22px;
+    border-radius: 24px;
+    margin: 0 auto 26px;
+  }
+  .hanuri .purpose .principles_box img {
+    width: 100%;
+  }
+  .hanuri .purpose .principles_box + .principles_box {
+    width: 427px;
+    padding: 0;
+    margin-top: 0;
+    background-color: #F4F5F7;
+  }
+  .hanuri .purpose .principles_box + .principles_box h3 {
+    margin-bottom: 11px;
   }
 }
 
