지도 pc사이즈

--- a/assets/scss/pages/_hanuri.scss
+++ b/assets/scss/pages/_hanuri.scss
@@ -176,6 +176,116 @@
             margin:0;
         }        
     }
+    .history {
+        padding-bottom: vw(50);
+        .img_tit {
+            position: relative;
+            width: 100%;
+            img {
+                width: 100%;
+            }
+            p {
+                position: absolute;
+                top:50%;
+                left:0;
+                transform: translateY(-50%);
+                width: 100%;
+                text-align: center;
+                font-family: "NanumSquare";
+                font-size: vw(30);
+                letter-spacing: vw(-1.5);
+                line-height: 1.33;
+                color:#fff;
+            }
+        }
+        .history_wrap {
+            padding:vw(40) vw(20) 0 vw(30);
+            position: relative;
+            &::before {
+                content:'';
+                display: block;
+                width: vw(2);
+                height: 105%;
+                background-color: #ddd;
+                position: absolute;
+                left:24vw;
+                top:0;
+            }
+            &.first {
+                &::before {
+                    top:10vw;
+                }
+            }
+            .__cont {
+                display: flex;
+                align-items: flex-start;
+                margin-bottom: vw(50);
+                .years {
+                    font-size: vw(16);
+                    margin-right: vw(45);
+                    color:#eb6100;                    
+                    letter-spacing: vw(-1.5);
+                    font-weight: 700;
+                    display: flex;
+                    align-items: center;
+                    line-height: 1;
+                    position: relative;
+                    &::after {
+                        content: '';
+                        display: block;
+                        width: 1.5vw;
+                        height: 1.5vw;
+                        border-radius: 100%;
+                        background-color: #eb6100;
+                        position: absolute;
+                        top:2.2vw;
+                        right:-4.7vw;
+                    }
+                }
+                .month {
+                    padding-top: vw(5);
+                    width: calc(100% - 10vw);
+                }
+                li {
+                    display: flex;
+                    margin-bottom: vw(12);
+                    flex-wrap: wrap;
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                    b {
+                        font-size: vw(29);
+                        color:#999;
+                        letter-spacing: vw(-1.45);
+                        white-space: nowrap;
+                        font-weight: 400;
+                        // margin-right: vw(17);
+                    }
+                    p {
+                        font-size: vw(24);
+                        letter-spacing: vw(-1.2);
+                        color:#333;
+                        line-height: 1.3;
+                        width: calc(100% - 8vw);
+                        margin-left: auto;
+                        &.point {
+                            color:#eb6100;
+                            font-weight: 700;
+                        }
+                        span {
+                            display: block;
+                            margin-top: vw(5);
+                            font-size: vw(20);
+                            word-break: keep-all;
+                        }
+                        & + p {
+                            margin-top: vw(3);
+                        }
+                    }
+                }
+            }
+        }                
+    }
     
 }
 @include desktop {
@@ -329,6 +439,9 @@
         
         .location {
             margin:0 0;
+            .text_list {
+                padding:30px 20px;
+            }    
         }        
     }    
 }
