--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -7679,6 +7679,143 @@ main > .tit {
   margin: 0;
 }
 
+.hanuri .history {
+  padding-bottom: 13.88889vw;
+}
+
+.hanuri .history .img_tit {
+  position: relative;
+  width: 100%;
+}
+
+.hanuri .history .img_tit img {
+  width: 100%;
+}
+
+.hanuri .history .img_tit p {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%;
+  text-align: center;
+  font-family: "NanumSquare";
+  font-size: 8.33333vw;
+  letter-spacing: -0.41667vw;
+  line-height: 1.33;
+  color: #fff;
+}
+
+.hanuri .history .history_wrap {
+  padding: 11.11111vw 5.55556vw 0 8.33333vw;
+  position: relative;
+}
+
+.hanuri .history .history_wrap::before {
+  content: '';
+  display: block;
+  width: 0.55556vw;
+  height: 105%;
+  background-color: #ddd;
+  position: absolute;
+  left: 24vw;
+  top: 0;
+}
+
+.hanuri .history .history_wrap.first::before {
+  top: 10vw;
+}
+
+.hanuri .history .history_wrap .__cont {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin-bottom: 13.88889vw;
+}
+
+.hanuri .history .history_wrap .__cont .years {
+  font-size: 4.44444vw;
+  margin-right: 12.5vw;
+  color: #eb6100;
+  letter-spacing: -0.41667vw;
+  font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  line-height: 1;
+  position: relative;
+}
+
+.hanuri .history .history_wrap .__cont .years::after {
+  content: '';
+  display: block;
+  width: 1.5vw;
+  height: 1.5vw;
+  border-radius: 100%;
+  background-color: #eb6100;
+  position: absolute;
+  top: 2.2vw;
+  right: -4.7vw;
+}
+
+.hanuri .history .history_wrap .__cont .month {
+  padding-top: 1.38889vw;
+  width: calc(100% - 10vw);
+}
+
+.hanuri .history .history_wrap .__cont li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 3.33333vw;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.hanuri .history .history_wrap .__cont li:last-child {
+  margin-bottom: 0;
+}
+
+.hanuri .history .history_wrap .__cont li b {
+  font-size: 8.05556vw;
+  color: #999;
+  letter-spacing: -0.40278vw;
+  white-space: nowrap;
+  font-weight: 400;
+}
+
+.hanuri .history .history_wrap .__cont li p {
+  font-size: 6.66667vw;
+  letter-spacing: -0.33333vw;
+  color: #333;
+  line-height: 1.3;
+  width: calc(100% - 8vw);
+  margin-left: auto;
+}
+
+.hanuri .history .history_wrap .__cont li p.point {
+  color: #eb6100;
+  font-weight: 700;
+}
+
+.hanuri .history .history_wrap .__cont li p span {
+  display: block;
+  margin-top: 1.38889vw;
+  font-size: 5.55556vw;
+  word-break: keep-all;
+}
+
+.hanuri .history .history_wrap .__cont li p + p {
+  margin-top: 0.83333vw;
+}
+
 @media (min-width: 1030px) {
   .hanuri {
     width: 1030px;
@@ -7837,6 +7974,9 @@ main > .tit {
   }
   .hanuri .location {
     margin: 0 0;
+  }
+  .hanuri .location .text_list {
+    padding: 30px 20px;
   }
 }
 
