--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -6419,14 +6419,21 @@ main > .tit {
         -ms-flex: 0;
             flex: 0;
     padding: 0 0 0 3.88889vw;
-    height: 12.22222vw;
+    min-height: 12.22222vw;
+    height: auto;
+    border-right: 0 solid #000;
   }
   .result.form .book_order_list li > div {
-    padding: 0 3.88889vw;
-    height: 12.22222vw;
+    padding: 1.38889vw 3.88889vw;
+    height: 100%;
+    min-height: 12.22222vw;
+    border-left: 1px solid #999;
   }
   .result.form .book_order_list li > div strong {
     font-size: 4.44444vw;
+  }
+  .result.form .book_order_list li > div span {
+    line-height: 1.4;
   }
   .result.form .chart_wrap {
     padding: 0 30px;
@@ -6480,6 +6487,7 @@ main > .tit {
     background-color: #F4F5F7;
     line-height: 1.4;
     color: #666;
+    border: 0 solid #000;
   }
   .result.form .item_evaluation {
     margin: 0 -4.16667vw;
@@ -7462,6 +7470,16 @@ main > .tit {
   }
 }
 
+#hanuri_history {
+  margin-top: 9.72222vw;
+}
+
+@media (min-width: 1030px) {
+  #hanuri_history {
+    margin-top: 0;
+  }
+}
+
 .hanuri {
   margin-bottom: 13.88889vw;
   margin-top: 23.05556vw;
@@ -7680,7 +7698,19 @@ main > .tit {
 }
 
 .hanuri .history {
-  padding-bottom: 13.88889vw;
+  position: relative;
+  margin: 0 -4.16667vw;
+}
+
+.hanuri .history::before {
+  content: '';
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: #ddd;
+  position: absolute;
+  left: 10.27778vw;
+  top: 0;
 }
 
 .hanuri .history .img_tit {
@@ -7701,73 +7731,41 @@ main > .tit {
   width: 100%;
   text-align: center;
   font-family: "NanumSquare";
-  font-size: 8.33333vw;
-  letter-spacing: -0.41667vw;
-  line-height: 1.33;
+  font-size: 4.72222vw;
+  letter-spacing: -0.05em;
+  line-height: 1.2;
   color: #fff;
 }
 
 .hanuri .history .history_wrap {
-  padding: 11.11111vw 5.55556vw 0 8.33333vw;
   position: relative;
-}
-
-.hanuri .history .history_wrap::before {
-  content: '';
-  display: block;
-  width: 0.55556vw;
-  height: 105%;
-  background-color: #ddd;
-  position: absolute;
-  left: 24vw;
-  top: 0;
 }
 
 .hanuri .history .history_wrap.first::before {
   top: 10vw;
 }
 
-.hanuri .history .history_wrap .__cont {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  margin-bottom: 13.88889vw;
-}
-
 .hanuri .history .history_wrap .__cont .years {
-  font-size: 4.44444vw;
-  margin-right: 12.5vw;
-  color: #eb6100;
-  letter-spacing: -0.41667vw;
-  font-weight: 700;
+  font-size: 6.11111vw;
+  color: #EA5504;
+  letter-spacing: -0.05em;
+  font-weight: 500;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  height: 10.27778vw;
   line-height: 1;
-  position: relative;
-}
-
-.hanuri .history .history_wrap .__cont .years::after {
-  content: '';
-  display: block;
-  width: 1.5vw;
-  height: 1.5vw;
-  border-radius: 100%;
-  background-color: #eb6100;
-  position: absolute;
-  top: 2.2vw;
-  right: -4.7vw;
+  background-color: #F0F1F2;
 }
 
 .hanuri .history .history_wrap .__cont .month {
-  padding-top: 1.38889vw;
-  width: calc(100% - 10vw);
+  padding: 5.55556vw 0 8.33333vw;
 }
 
 .hanuri .history .history_wrap .__cont li {
@@ -7784,25 +7782,31 @@ main > .tit {
 }
 
 .hanuri .history .history_wrap .__cont li b {
-  font-size: 8.05556vw;
+  font-size: 4.44444vw;
   color: #999;
-  letter-spacing: -0.40278vw;
   white-space: nowrap;
-  font-weight: 400;
+  font-weight: 500;
+  width: 10.27778vw;
+  text-align: center;
+}
+
+.hanuri .history .history_wrap .__cont li div {
+  padding: 0.83333vw 2.77778vw 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .hanuri .history .history_wrap .__cont li p {
-  font-size: 6.66667vw;
-  letter-spacing: -0.33333vw;
+  font-size: 4.16667vw;
   color: #333;
-  line-height: 1.3;
-  width: calc(100% - 8vw);
-  margin-left: auto;
+  line-height: 1.2;
+  position: relative;
 }
 
 .hanuri .history .history_wrap .__cont li p.point {
-  color: #eb6100;
-  font-weight: 700;
+  color: #EA5504;
+  font-weight: 500;
 }
 
 .hanuri .history .history_wrap .__cont li p span {
@@ -7813,7 +7817,19 @@ main > .tit {
 }
 
 .hanuri .history .history_wrap .__cont li p + p {
-  margin-top: 0.83333vw;
+  margin-top: 2.77778vw;
+}
+
+.hanuri .history .history_wrap .__cont li p::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 1.94444vw;
+  left: -3.40278vw;
+  width: 1.38889vw;
+  height: 1.38889vw;
+  border-radius: 50%;
+  background-color: #C4C4C4;
 }
 
 @media (min-width: 1030px) {
