--- a/assets/scss/pages/_hanuri.scss
+++ b/assets/scss/pages/_hanuri.scss
@@ -5,6 +5,12 @@
         margin-top: 0;
     }
 }
+#hanuri_history {
+    margin-top: vw(35);
+    @include desktop {
+        margin-top: 0;
+    }
+}
 .hanuri {
     margin-bottom: vw(50);
     margin-top: vw(83);
@@ -177,7 +183,18 @@
         }        
     }
     .history {
-        padding-bottom: vw(50);
+        position: relative;
+        margin:0 vw(-15);
+        &::before {
+            content:'';
+            display: block;
+            width: 1px;
+            height: 100%;
+            background-color: #ddd;
+            position: absolute;
+            left:vw(37);
+            top:0;
+        }
         .img_tit {
             position: relative;
             width: 100%;
@@ -192,59 +209,34 @@
                 width: 100%;
                 text-align: center;
                 font-family: "NanumSquare";
-                font-size: vw(30);
-                letter-spacing: vw(-1.5);
-                line-height: 1.33;
+                font-size: vw(17);
+                letter-spacing: -0.05em;
+                line-height: 1.2;
                 color:#fff;
             }
         }
         .history_wrap {
-            padding:vw(40) vw(20) 0 vw(30);
-            position: relative;
-            &::before {
-                content:'';
-                display: block;
-                width: vw(2);
-                height: 105%;
-                background-color: #ddd;
-                position: absolute;
-                left:24vw;
-                top:0;
-            }
+            position: relative;            
             &.first {
                 &::before {
                     top:10vw;
                 }
             }
             .__cont {
-                display: flex;
-                align-items: flex-start;
-                margin-bottom: vw(50);
                 .years {
-                    font-size: vw(16);
-                    margin-right: vw(45);
-                    color:#eb6100;                    
-                    letter-spacing: vw(-1.5);
-                    font-weight: 700;
+                    font-size: vw(22);
+                    color:#EA5504;                    
+                    letter-spacing: -0.05em;
+                    font-weight: 500;
                     display: flex;
+                    justify-content: center;
                     align-items: center;
+                    height: vw(37);
                     line-height: 1;
-                    position: relative;
-                    &::after {
-                        content: '';
-                        display: block;
-                        width: 1.5vw;
-                        height: 1.5vw;
-                        border-radius: 100%;
-                        background-color: #eb6100;
-                        position: absolute;
-                        top:2.2vw;
-                        right:-4.7vw;
-                    }
+                    background-color: #F0F1F2;                                        
                 }
                 .month {
-                    padding-top: vw(5);
-                    width: calc(100% - 10vw);
+                    padding: vw(20) 0 vw(30);                    
                 }
                 li {
                     display: flex;
@@ -254,23 +246,25 @@
                         margin-bottom: 0;
                     }
                     b {
-                        font-size: vw(29);
+                        font-size: vw(16);
                         color:#999;
-                        letter-spacing: vw(-1.45);
                         white-space: nowrap;
-                        font-weight: 400;
-                        // margin-right: vw(17);
+                        font-weight: 500;
+                        width: vw(37);
+                        text-align: center;
+                    }
+                    div {
+                        padding:vw(3) vw(10) 0;
+                        flex: 1;
                     }
                     p {
-                        font-size: vw(24);
-                        letter-spacing: vw(-1.2);
+                        font-size: vw(15);
                         color:#333;
-                        line-height: 1.3;
-                        width: calc(100% - 8vw);
-                        margin-left: auto;
+                        line-height: 1.2;
+                        position: relative;
                         &.point {
-                            color:#eb6100;
-                            font-weight: 700;
+                            color:#EA5504;
+                            font-weight: 500;
                         }
                         span {
                             display: block;
@@ -279,7 +273,18 @@
                             word-break: keep-all;
                         }
                         & + p {
-                            margin-top: vw(3);
+                            margin-top: vw(10);
+                        }
+                        &::before {
+                            content: '';
+                            display:block;
+                            position: absolute;
+                            top:vw(7);
+                            left:vw(-12.25);
+                            width: vw(5);
+                            height: vw(5);
+                            border-radius: 50%;
+                            background-color: #C4C4C4;
                         }
                     }
                 }
