--- a/assets/scss/pages/_result.scss
+++ b/assets/scss/pages/_result.scss
@@ -583,14 +583,21 @@
                     min-width: vw(90);
                     flex: 0;
                     padding: 0 0 0 vw(14);
-                    height: vw(44);
+                    min-height: vw(44);
+                    height: auto;
+                    border-right: 0 solid #000;
                 }
                 li {                                        
                     > div {
-                        padding:0 vw(14);
-                        height: vw(44);
+                        padding:vw(5) vw(14);
+                        height: 100%;
+                        min-height: vw(44);
+                        border-left: 1px solid #999;
                         strong {
                             font-size: vw(16);
+                        }
+                        span {
+                            line-height: 1.4;
                         }
                     }
                 }                
@@ -646,6 +653,7 @@
                     background-color:#F4F5F7;
                     line-height: 1.4;
                     color:#666;
+                    border: 0 solid #000;
                 }
             }
             .item_evaluation {
