--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -7707,7 +7707,7 @@ main > .tit {
   display: block;
   width: 1px;
   height: 100%;
-  background-color: #ddd;
+  background-color: #ececec;
   position: absolute;
   left: 10.27778vw;
   top: 0;
@@ -7730,19 +7730,10 @@ main > .tit {
           transform: translateY(-50%);
   width: 100%;
   text-align: center;
-  font-family: "NanumSquare";
   font-size: 4.72222vw;
   letter-spacing: -0.05em;
   line-height: 1.2;
   color: #fff;
-}
-
-.hanuri .history .history_wrap {
-  position: relative;
-}
-
-.hanuri .history .history_wrap.first::before {
-  top: 10vw;
 }
 
 .hanuri .history .history_wrap .__cont .years {
@@ -7993,6 +7984,98 @@ main > .tit {
   }
   .hanuri .location .text_list {
     padding: 30px 20px;
+  }
+  .hanuri .history {
+    position: relative;
+    margin: 00;
+  }
+  .hanuri .history::before {
+    width: 2px;
+    height: calc(100% - 220px);
+    left: 119px;
+    top: auto;
+    bottom: 0;
+  }
+  .hanuri .history .img_tit {
+    position: relative;
+  }
+  .hanuri .history .img_tit p {
+    font-size: 28px;
+    font-weight: 500;
+  }
+  .hanuri .history .history_wrap .__cont {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 60px 0;
+  }
+  .hanuri .history .history_wrap .__cont .years {
+    font-size: 36px;
+    font-weight: 400;
+    display: block;
+    height: auto;
+    line-height: 1;
+    background-color: #fff;
+    width: 119px;
+    text-align: center;
+    position: relative;
+  }
+  .hanuri .history .history_wrap .__cont .years::before {
+    content: '';
+    display: block;
+    width: 0px;
+    height: 0px;
+    border-left: 12px solid #EA5504;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+    position: absolute;
+    top: 10px;
+    right: -12px;
+  }
+  .hanuri .history .history_wrap .__cont .month {
+    padding: 0;
+    width: calc(100% - 119px);
+  }
+  .hanuri .history .history_wrap .__cont .month + .years {
+    margin-top: 60px;
+  }
+  .hanuri .history .history_wrap .__cont .month + .years + .month {
+    margin-top: 60px;
+  }
+  .hanuri .history .history_wrap .__cont li {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    margin-bottom: 20px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding-top: 2px;
+  }
+  .hanuri .history .history_wrap .__cont li:last-child {
+    margin-bottom: 0;
+  }
+  .hanuri .history .history_wrap .__cont li b {
+    font-size: 22px;
+    width: 71px;
+  }
+  .hanuri .history .history_wrap .__cont li div {
+    padding: 0;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+  }
+  .hanuri .history .history_wrap .__cont li p {
+    font-size: 22px;
+    line-height: 1.3;
+    padding-top: 3px;
+  }
+  .hanuri .history .history_wrap .__cont li p + p {
+    margin-top: 20px;
+  }
+  .hanuri .history .history_wrap .__cont li p::before {
+    display: none;
   }
 }
 
