--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -29,6 +29,7 @@ body {
 	-ms-overflow-style: none; 
 	overflow-x: hidden;
 	letter-spacing: -0.05em;
+	position: relative;
 }
 // ::-webkit-scrollbar { 
 // 	display: none;
