--- a/assets/scss/pages/_main.scss
+++ b/assets/scss/pages/_main.scss
@@ -73,16 +73,16 @@
                 color:#000;
                 padding:vw(10) 0 vw(10) vw(110);
                 &:nth-child(1) {
-                    background: url(../img/ico_main_cont2_01.svg) no-repeat 0 0 / vw(94) vw(92);
+                    background: url(../img/ico_main_cont2_01.svg) no-repeat 0 50% / vw(90) vw(90);
                 }
                 &:nth-child(2) {
-                    background: url(../img/ico_main_cont2_02.svg) no-repeat 0 0 / vw(94) vw(92);
+                    background: url(../img/ico_main_cont2_02.svg) no-repeat 0 50% / vw(90) vw(90);
                 }
                 &:nth-child(3) {
-                    background: url(../img/ico_main_cont2_03.svg) no-repeat 0 0 / vw(94) vw(92);
+                    background: url(../img/ico_main_cont2_03.svg) no-repeat 0 50% / vw(90) vw(90);
                 }
                 &:nth-child(4) {
-                    background: url(../img/ico_main_cont2_04.svg) no-repeat 0 0 / vw(94) vw(92);
+                    background: url(../img/ico_main_cont2_04.svg) no-repeat 0 50% / vw(90) vw(90);
                 }
                 &:last-child {
                     margin-bottom: 0;
@@ -149,12 +149,12 @@
             }
             dt {
                 font-weight: 700;
-                width: vw(70);
+                width: vw(58);
                 display: flex;
                 justify-content: space-between;
                 span {
                     &:last-child {
-                        margin-right: vw(7);
+                        margin-right: 0;
                     }
                 }
             }
